--- a/src/app/base/less/base.less
+++ b/src/app/base/less/base.less
@@ -1813,9 +1813,10 @@ input[type=number]::-webkit-outer-spin-button {
 		margin-left: 13px;
 		border: none;
 		transition: all 0.4s ease-out;
-		padding: 7.6px 25px;
+		padding: 8px 25px;
 		text-decoration:none;
 		color:@color0;
+		font-size:13px;
 		 &:before{
 			content: "";
 			border: 16px solid #fff;
