--- a/src/app/checkout/less/checkout.less
+++ b/src/app/checkout/less/checkout.less
@@ -75,7 +75,7 @@ input.error, .errorMMyy {
 	    }
     }
     .cancel-order{
-    	border-left: 1px solid #f2f5f7;
+    	border-right: 1px solid #f2f5f7;
 	    width: auto;
 	    float:left;
 	    padding: 0 20px;
@@ -96,7 +96,19 @@ input.error, .errorMMyy {
 			h5{
 				color:@color0;
 			}
+			svg{
+				fill:#fff;
+			}
+
 		}
+		svg{
+			    width: 12px;
+                height: 12px;
+    			display: inline-block;
+    			fill:#F32929;
+    			margin-top:-5px;
+		}
+		
     }
     .save-later{
     	border-left: 1px solid #f2f5f7;
@@ -118,7 +130,18 @@ input.error, .errorMMyy {
 			h5{
 				color:@color0;
 			}
+			svg{
+				fill:#fff;
+			}
 		}
+		svg{
+			 display: inline-block;
+		    width: 15px;
+		    height: 15px;
+		    fill: #8c58b5;
+		    margin-top:-5px;
+		}
+		
     }
 	.modal{
 		top: 75px;
