--- a/src/app/buildOrder/less/buildOrder.less
+++ b/src/app/buildOrder/less/buildOrder.less
@@ -1839,6 +1839,14 @@ input.error, .errorCity {
 				   color:#f32929;
 				   font-size:14px;
 				 }
+				 .buyers-list{
+				 	float:right;
+				 	margin-top:24px;
+				 	width:53%;
+				 	label{
+				 		font-size:14px;
+				 		}
+				 }
 				.qty {
 					
 					p {
@@ -2524,6 +2532,7 @@ input.error, .errorCity {
 			width: 12px;
 			height: 12px;
 			.in-block;
+			margin-top:-5px;
 			.st0 {
 				fill: #F32929;
 			}
@@ -2558,6 +2567,7 @@ input.error, .errorCity {
 			width: 15px;
 			height: 15px;
 			fill: @primary-dark-color;
+			margin-top:-5px;
 		}
 		&:hover {
 			color: @color0;
@@ -2614,6 +2624,7 @@ input.error, .errorCity {
 			.background-fade;
 			text-align: center;
 			float:right;
+			cursor:default;
 			&:hover {
 				background-color: #7a43a3;
 			}
