--- a/src/app/checkout/templates/checkout.bottom.tpl.html
+++ b/src/app/checkout/templates/checkout.bottom.tpl.html
@@ -1,8 +1,22 @@
 <div class="checkoutfooter" ng-show="application.headerstat">
 	<div class="cancel-order">
+	<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 34 34" style="enable-background:new 0 0 34 34;" xml:space="preserve" class="footer-svg">
+			<g transform="translate(0,-952.36218)">
+				<path  d="M17,952.7c-4.3,0-8.5,1.6-11.8,4.9c-6.5,6.5-6.5,17.1,0,23.6c6.5,6.5,17.1,6.5,23.6,0c6.5-6.5,6.5-17.1,0-23.6
+					v0C25.5,954.3,21.3,952.7,17,952.7L17,952.7z M17,955.8c3.5,0,6.9,1.3,9.6,4c5.3,5.3,5.3,13.8,0,19.1c-5.3,5.3-13.8,5.3-19.1,0
+					c-5.3-5.3-5.3-13.8,0-19.1C10.1,957.2,13.5,955.8,17,955.8z M13.1,963.9c-0.1,0-0.1,0-0.2,0c-0.9,0.1-1.5,0.9-1.4,1.7
+					c0,0.4,0.2,0.7,0.5,1l2.7,2.7l-2.7,2.7c-0.6,0.6-0.6,1.6,0,2.2c0.6,0.6,1.6,0.6,2.2,0c0,0,0,0,0,0l2.7-2.7l2.7,2.7
+					c0.6,0.7,1.6,0.7,2.2,0.2c0.7-0.6,0.7-1.6,0.2-2.2c-0.1-0.1-0.1-0.1-0.2-0.2l-2.7-2.7l2.7-2.7c0.6-0.6,0.6-1.6,0-2.2
+					c-0.3-0.3-0.7-0.5-1.2-0.5c-0.4,0-0.8,0.2-1.1,0.5l-2.7,2.7l-2.7-2.7C14,964.1,13.6,963.9,13.1,963.9L13.1,963.9z"></path>
+			</g>
+		</svg>
 		<h5 ng-click="cancelOrder()">Cancel Order</h5>
 	</div>
 	<div class="save-later" ng-click="checkout.saveLaterPopup()">
+		<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="-630.3 455.4 25.2 24" style="enable-background:new -630.3 455.4 25.2 24;" xml:space="preserve" class="footer-svg">
+		<polygon points="-617.7,456.4 -614.9,464.8 -606.1,464.8 -613.2,470 -610.5,478.5 -617.7,473.3 -624.8,478.5 
+			-622.1,470 -629.2,464.8 -620.4,464.8 "></polygon>
+		</svg>
 		<h5>Save For Later</h5>
 	</div>
 	<modalr title="Save Order For Later" visible="checkout.showModal" id="mymodal">
