--- a/src/app/base/less/base.less
+++ b/src/app/base/less/base.less
@@ -379,6 +379,9 @@ input[type=number]::-webkit-outer-spin-button {
                 background:#f7f8fa !important;
 			}
     }
+	.help-block{
+		display:none;
+	}
 	i {
 		font-size:20px;
 		left:8px;
@@ -1816,7 +1819,7 @@ input[type=number]::-webkit-outer-spin-button {
 		padding: 8px 25px;
 		text-decoration:none;
 		color:@color0;
-		font-size:13px;
+		font-size:13px !important;
 		 &:before{
 			content: "";
 			border: 16px solid #fff;
