--- a/src/app/buildOrder/templates/buildOrder.plp.tpl.html
+++ b/src/app/buildOrder/templates/buildOrder.plp.tpl.html
@@ -42,9 +42,9 @@
 		</ul>
 	</div>
 	<!-- product Searched results -->
-	<div class="home-search-list" ng-if="buildOrder.searchType == 'Products' &&  buildOrder.searchval.length == 0">
+	<div class="home-search-list" ng-if="buildOrder.searchType == 'Products' &&  buildOrder.searchList.length >= 0">
 		<h1 ng-if="buildOrder.searchList.length > 0">Search Results for <span>"{{buildOrder.searchTxt}}"</span> <span class="count">({{buildOrder.searchList.length}} products)</span></h1>
-		<h1 ng-if="buildOrder.searchList.length == 0">No results found for <span>"{{buildOrder.searchTxt}}"</span></h1>
+		<!-- <h1 ng-if="buildOrder.searchList.length == 0">No results found for <span>"{{buildOrder.searchTxt}}"</span></h1> -->
 		<ul class="plp-container">
 			<li class="col-md-3" ng-repeat="prod in buildOrder.searchList track by $index">
 				<div class="plp-block">
@@ -66,7 +66,7 @@
 		</ul>
 	</div>
 	<!-- direct pdp- product Searched results based on sequence number -->
-	<div class="home-search-list" ng-if="buildOrder.searchType == 'PDP' &&  buildOrder.searchval.length == 0 && buildOrder.searchSeqList.length>0">
+	<div class="home-search-list" ng-if="buildOrder.searchType == 'PDP' && buildOrder.searchSeqList.length>0">
 		<h1 ng-if="buildOrder.searchSeqList.length > 0">Search Results for <span>"{{buildOrder.prodName}}"</span></h1>
 		<!-- <h1 ng-if="buildOrder.searchSeqList.length == 0">No results found for <span>"{{buildOrder.searchTxt}}"</span></h1> -->
 		<ul class="plp-container">
@@ -90,7 +90,7 @@
 		</ul>
 	</div>
 	<!-- category Product List starts -->
-	<div class="home-search-list" ng-if="buildOrder.searchType == 'plp' &&  buildOrder.searchval.length == 0 && buildOrder.catList.length>0">
+	<div class="home-search-list" ng-if="buildOrder.searchType == 'plp' && buildOrder.catList.length>0">
 		<h1 ng-if="buildOrder.catList.length > 0">Products under the category <span>"{{buildOrder.catName}}"</span> <span class="count">({{buildOrder.catList.length}} products)</span></h1>
 		<!-- <h1 ng-if="buildOrder.catList.length == 0">No Products found</span></h1> -->
 		<ul class="plp-container">
