--- a/src/app/buildOrder/templates/buildOrder.pdp.tpl.html
+++ b/src/app/buildOrder/templates/buildOrder.pdp.tpl.html
@@ -206,7 +206,7 @@
 										<p ng-init="buildOrder.AddExtra[$index] = {'Name':'Select'}">{{buildOrder.AddExtra[$index].Name}}</p>
 									</button>
 									<ul class="pdp-extra-menu" uib-dropdown-menu="" role="menu" aria-labelledby="single-button" >
-										<li role="menuitem" ng-click="buildOrder.AddExtra[$index] = {'Name':'Select'}">
+										<li role="menuitem" ng-click="buildOrder.AddExtra[$index] = {'Name':'Select'}" class="select-option-in-menu">
 											<div class="row pro-del">
 												<div class="col-xs-10 col-sm-9 col-md-9 col-lg-9">
 													<h5>---Select---</h5>
@@ -373,8 +373,8 @@
 									</span>
 								</div>
 							</div>
-							<p style="color:red;" ng-if="buildOrder.DeliveryNotAvailable">Delivery Not Available To The Specified Zip...</p>
-							<p style="color:green;" ng-if="buildOrder.DeliveryNotAvailable==false">Delivery Available...!</p>
+							<p class="delivery-success" style="color:red;" ng-if="buildOrder.DeliveryNotAvailable">Delivery Not Available To The Specified Zip...</p>
+							<p class="delivery-failure" style="color:green;" ng-if="buildOrder.DeliveryNotAvailable==false">Delivery Available...!</p>
 						</div>
 				<button class="addCart" ng-if="buildOrder.hidePdpblock">REGISTER</button>
 				<button class="addCart" ng-click="AddtoCart(buildOrder.selectedProductId)" ng-if="!buildOrder.hidePdpblock">ADD TO CART</button>
