--- a/src/app/buildOrder/templates/buildOrder.top.tpl.html
+++ b/src/app/buildOrder/templates/buildOrder.top.tpl.html
@@ -17,7 +17,7 @@
             <div class="search_box" ng-hide="hideSearchBox">
                 <div class="search_feild" ng-click="toggleMenu($event)">
                     <a ui-sref="buildOrder"><i class="fa fa-search"></i></a>
-                    <ordercloud-search servicename="products" controlleras="buildOrder" attribute="buildorder-search"></ordercloud-search>
+                    <ordercloud-search servicename="products" controlleras="buildOrder" placeholder="Search" search="buildOrder.search" attribute="buildorder-search" change=""></ordercloud-search>
                 </div>
             </div>
 			<div class="buildordersummaryheader" ng-show="showOrdersummary">
